...

// All valid routes in the app
export const VALID_ROUTES = {
  // Main Navigator Routes
  MAIN: {
    HOME: 'Home',
    ORDERS: 'Orders',
    MAIN_TABS: 'MainTabs',
    REPORTS: 'Reports',
    EMPLOYEES: 'Employees',
    CUSTOMERS: 'Customers',
    INVENTORY: 'Inventory',
    MENU_MANAGEMENT: 'MenuManagement',
...
