...
 */

export const CHUCHO_MENU_ITEMS = [
  // SNACKS
  {
    id: 1,
    name: 'Nachos',
    price: 5.0,
    category: 'Snacks',
    description:
      'Homemade corn tortilla chips with black beans, tomato salsa, pico de gallo, feta, guac & coriander',
    image: '🍲',
    available: true,
...
